--- a/dependencies.html
+++ b/dependencies.html
@@ -28,7 +28,7 @@
       <div id="breadcrumbs">
         <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2019-05-10</li>
-      <li id="projectVersion" class="pull-right">Version: 0.1.1</li>
+      <li id="projectVersion" class="pull-right">Version: 0.1.2</li>
         </ul>
       </div>
       <div class="row-fluid">
@@ -396,7 +396,7 @@
 <div class="section">
 <h3><a name="Dependency_Tree"></a>Dependency Tree</h3>
 <ul>
-<li>org.microbean:microbean-microprofile-config:jar:0.1.1 <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
+<li>org.microbean:microbean-microprofile-config:jar:0.1.2 <img id="_img1" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep0', '_img1' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep0" style="display:none">
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>microBean MicroProfile Configuration Implementation</th></tr>
@@ -404,7 +404,7 @@
 <td>
 <p><b>Description: </b>microBean MicroProfile Configuration Implementation</p>
 <p><b>URL: </b><a class="externalLink" href="http://microbean.github.io/microbean-microprofile-config">http://microbean.github.io/microbean-microprofile-config</a></p>
-<p><b>Project Licenses: </b><a class="externalLink" href="https://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a></p></td></tr></table></div>
+<p><b>Project Licenses: </b><a class="externalLink" href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License 2.0</a></p></td></tr></table></div>
 <ul>
 <li>org.jboss.arquillian.testng:arquillian-testng-container:jar:1.4.1.Final (test) <img id="_img3" src="./images/icon_info_sml.gif" alt="[Information]" onclick="toggleDependencyDetails( '_dep2', '_img3' );" style="cursor: pointer; vertical-align: text-bottom;"></img><div id="_dep2" style="display:none">
 <table border="0" class="table table-striped">
@@ -1156,7 +1156,7 @@
     <footer>
       <div class="container-fluid">
         <div class="row-fluid">
-            <p>Copyright &copy;2017&#x2013;2019
+            <p>Copyright &copy;2019
 <a href="http://microbean.systems/">microBean</a>.
 All rights reserved.</p>
         </div>
