--- a/plugin-management.html
+++ b/plugin-management.html
@@ -28,7 +28,7 @@
       <div id="breadcrumbs">
         <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2019-05-10</li>
-      <li id="projectVersion" class="pull-right">Version: 0.1.1</li>
+      <li id="projectVersion" class="pull-right">Version: 0.1.2</li>
         </ul>
       </div>
       <div class="row-fluid">
@@ -93,7 +93,7 @@
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-assembly-plugin/">maven-assembly-plugin</a></td>
-<td>3.1.0</td></tr>
+<td>3.1.1</td></tr>
 <tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-clean-plugin/">maven-clean-plugin</a></td>
@@ -101,7 +101,7 @@
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-compiler-plugin/">maven-compiler-plugin</a></td>
-<td>3.8.0</td></tr>
+<td>3.8.1</td></tr>
 <tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-dependency-plugin/">maven-dependency-plugin</a></td>
@@ -110,14 +110,6 @@
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-deploy-plugin/">maven-deploy-plugin</a></td>
 <td>3.0.0-M1</td></tr>
-<tr class="b">
-<td>org.apache.maven.plugins</td>
-<td><a class="externalLink" href="https://maven.apache.org/plugins/maven-ear-plugin/">maven-ear-plugin</a></td>
-<td>3.0.1</td></tr>
-<tr class="a">
-<td>org.apache.maven.plugins</td>
-<td><a class="externalLink" href="https://maven.apache.org/plugins/maven-ejb-plugin/">maven-ejb-plugin</a></td>
-<td>3.0.1</td></tr>
 <tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/enforcer/maven-enforcer-plugin/">maven-enforcer-plugin</a></td>
@@ -157,7 +149,7 @@
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/scm/maven-scm-plugin/">maven-scm-plugin</a></td>
-<td>1.11.1</td></tr>
+<td>1.11.2</td></tr>
 <tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-site-plugin/">maven-site-plugin</a></td>
@@ -169,20 +161,16 @@
 <tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/surefire/maven-surefire-plugin/">maven-surefire-plugin</a></td>
-<td>2.22.1</td></tr>
+<td>2.22.2</td></tr>
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-toolchains-plugin/">maven-toolchains-plugin</a></td>
 <td>1.1</td></tr>
 <tr class="b">
-<td>org.apache.maven.plugins</td>
-<td><a class="externalLink" href="https://maven.apache.org/plugins/maven-war-plugin/">maven-war-plugin</a></td>
-<td>3.2.2</td></tr>
-<tr class="a">
 <td>org.codehaus.mojo</td>
 <td><a class="externalLink" href="http://www.mojohaus.org/versions-maven-plugin/">versions-maven-plugin</a></td>
 <td>2.7</td></tr>
-<tr class="b">
+<tr class="a">
 <td>org.sonatype.plugins</td>
 <td><a class="externalLink" href="http://www.sonatype.com/public-parent/nexus-maven-plugins/nexus-staging/nexus-staging-maven-plugin/">nexus-staging-maven-plugin</a></td>
 <td>1.6.8</td></tr></table></div>
@@ -193,7 +181,7 @@
     <footer>
       <div class="container-fluid">
         <div class="row-fluid">
-            <p>Copyright &copy;2017&#x2013;2019
+            <p>Copyright &copy;2019
 <a href="http://microbean.systems/">microBean</a>.
 All rights reserved.</p>
         </div>
