--- a/plugins.html
+++ b/plugins.html
@@ -28,7 +28,7 @@
       <div id="breadcrumbs">
         <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2019-05-10</li>
-      <li id="projectVersion" class="pull-right">Version: 0.1.1</li>
+      <li id="projectVersion" class="pull-right">Version: 0.1.2</li>
         </ul>
       </div>
       <div class="row-fluid">
@@ -89,7 +89,7 @@
 <tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-compiler-plugin/">maven-compiler-plugin</a></td>
-<td>3.8.0</td></tr>
+<td>3.8.1</td></tr>
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/plugins/maven-deploy-plugin/">maven-deploy-plugin</a></td>
@@ -125,7 +125,7 @@
 <tr class="a">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="https://maven.apache.org/surefire/maven-surefire-plugin/">maven-surefire-plugin</a></td>
-<td>2.22.1</td></tr>
+<td>2.22.2</td></tr>
 <tr class="b">
 <td>org.apache.maven.plugins</td>
 <td><a class="externalLink" href="http://maven.apache.org/plugins/maven-toolchains-plugin/">maven-toolchains-plugin</a></td>
@@ -160,7 +160,7 @@
     <footer>
       <div class="container-fluid">
         <div class="row-fluid">
-            <p>Copyright &copy;2017&#x2013;2019
+            <p>Copyright &copy;2019
 <a href="http://microbean.systems/">microBean</a>.
 All rights reserved.</p>
         </div>
