--- a/spotbugs.html
+++ b/spotbugs.html
@@ -28,7 +28,7 @@
       <div id="breadcrumbs">
         <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2019-05-10</li>
-      <li id="projectVersion" class="pull-right">Version: 0.1.1</li>
+      <li id="projectVersion" class="pull-right">Version: 0.1.2</li>
         </ul>
       </div>
       <div class="row-fluid">
@@ -94,7 +94,7 @@
     <footer>
       <div class="container-fluid">
         <div class="row-fluid">
-            <p>Copyright &copy;2017&#x2013;2019
+            <p>Copyright &copy;2019
 <a href="http://microbean.systems/">microBean</a>.
 All rights reserved.</p>
         </div>
