--- a/summary.html
+++ b/summary.html
@@ -28,7 +28,7 @@
       <div id="breadcrumbs">
         <ul class="breadcrumb">
         <li id="publishDate">Last Published: 2019-05-10</li>
-      <li id="projectVersion" class="pull-right">Version: 0.1.1</li>
+      <li id="projectVersion" class="pull-right">Version: 0.1.2</li>
         </ul>
       </div>
       <div class="row-fluid">
@@ -114,7 +114,7 @@
 <td>microbean-microprofile-config</td></tr>
 <tr class="b">
 <td>Version</td>
-<td>0.1.1</td></tr>
+<td>0.1.2</td></tr>
 <tr class="a">
 <td>Type</td>
 <td>jar</td></tr>
@@ -128,7 +128,7 @@
     <footer>
       <div class="container-fluid">
         <div class="row-fluid">
-            <p>Copyright &copy;2017&#x2013;2019
+            <p>Copyright &copy;2019
 <a href="http://microbean.systems/">microBean</a>.
 All rights reserved.</p>
         </div>
