--- a/testapidocs/src-html/org/microbean/microprofile/config/TestMicroProfileConfigProperties.html
+++ b/testapidocs/src-html/org/microbean/microprofile/config/TestMicroProfileConfigProperties.html
@@ -33,36 +33,39 @@
 <span class="sourceLineNo">025</span>import org.eclipse.microprofile.config.Config;<a name="line.25"></a>
 <span class="sourceLineNo">026</span>import org.eclipse.microprofile.config.ConfigProvider;<a name="line.26"></a>
 <span class="sourceLineNo">027</span><a name="line.27"></a>
-<span class="sourceLineNo">028</span>import static org.junit.Assert.assertNotNull;<a name="line.28"></a>
-<span class="sourceLineNo">029</span>import static org.junit.Assert.assertTrue;<a name="line.29"></a>
-<span class="sourceLineNo">030</span><a name="line.30"></a>
-<span class="sourceLineNo">031</span>public class TestMicroProfileConfigProperties {<a name="line.31"></a>
-<span class="sourceLineNo">032</span><a name="line.32"></a>
-<span class="sourceLineNo">033</span>  private static Properties old;<a name="line.33"></a>
-<span class="sourceLineNo">034</span>  <a name="line.34"></a>
-<span class="sourceLineNo">035</span>  @BeforeClass<a name="line.35"></a>
-<span class="sourceLineNo">036</span>  public static void install() {<a name="line.36"></a>
-<span class="sourceLineNo">037</span>    old = System.getProperties();<a name="line.37"></a>
-<span class="sourceLineNo">038</span>    MicroProfileConfigProperties.installAsSystemProperties();<a name="line.38"></a>
-<span class="sourceLineNo">039</span>  }<a name="line.39"></a>
-<span class="sourceLineNo">040</span><a name="line.40"></a>
-<span class="sourceLineNo">041</span>  @AfterClass<a name="line.41"></a>
-<span class="sourceLineNo">042</span>  public static void uninstall() {<a name="line.42"></a>
-<span class="sourceLineNo">043</span>    System.setProperties(old);<a name="line.43"></a>
-<span class="sourceLineNo">044</span>  }<a name="line.44"></a>
-<span class="sourceLineNo">045</span><a name="line.45"></a>
-<span class="sourceLineNo">046</span>  @Test<a name="line.46"></a>
-<span class="sourceLineNo">047</span>  public void testGet() {<a name="line.47"></a>
-<span class="sourceLineNo">048</span>    assertNotNull(System.getProperty("java.home"));<a name="line.48"></a>
-<span class="sourceLineNo">049</span>  }<a name="line.49"></a>
-<span class="sourceLineNo">050</span>  <a name="line.50"></a>
-<span class="sourceLineNo">051</span>  @Test<a name="line.51"></a>
-<span class="sourceLineNo">052</span>  public void testSystemPropertiesBehavior() {<a name="line.52"></a>
-<span class="sourceLineNo">053</span>    final Properties properties = System.getProperties();<a name="line.53"></a>
-<span class="sourceLineNo">054</span>    assertTrue(properties.containsKey("java.home"));<a name="line.54"></a>
-<span class="sourceLineNo">055</span>  }<a name="line.55"></a>
-<span class="sourceLineNo">056</span>  <a name="line.56"></a>
-<span class="sourceLineNo">057</span>}<a name="line.57"></a>
+<span class="sourceLineNo">028</span>import static org.junit.Assert.assertEquals;<a name="line.28"></a>
+<span class="sourceLineNo">029</span>import static org.junit.Assert.assertNotNull;<a name="line.29"></a>
+<span class="sourceLineNo">030</span>import static org.junit.Assert.assertTrue;<a name="line.30"></a>
+<span class="sourceLineNo">031</span><a name="line.31"></a>
+<span class="sourceLineNo">032</span>public class TestMicroProfileConfigProperties {<a name="line.32"></a>
+<span class="sourceLineNo">033</span><a name="line.33"></a>
+<span class="sourceLineNo">034</span>  private static Properties old;<a name="line.34"></a>
+<span class="sourceLineNo">035</span>  <a name="line.35"></a>
+<span class="sourceLineNo">036</span>  @BeforeClass<a name="line.36"></a>
+<span class="sourceLineNo">037</span>  public static void install() {<a name="line.37"></a>
+<span class="sourceLineNo">038</span>    old = System.getProperties();<a name="line.38"></a>
+<span class="sourceLineNo">039</span>    MicroProfileConfigProperties.installAsSystemProperties();<a name="line.39"></a>
+<span class="sourceLineNo">040</span>  }<a name="line.40"></a>
+<span class="sourceLineNo">041</span><a name="line.41"></a>
+<span class="sourceLineNo">042</span>  @AfterClass<a name="line.42"></a>
+<span class="sourceLineNo">043</span>  public static void uninstall() {<a name="line.43"></a>
+<span class="sourceLineNo">044</span>    System.setProperties(old);<a name="line.44"></a>
+<span class="sourceLineNo">045</span>  }<a name="line.45"></a>
+<span class="sourceLineNo">046</span><a name="line.46"></a>
+<span class="sourceLineNo">047</span>  @Test<a name="line.47"></a>
+<span class="sourceLineNo">048</span>  public void testGet() {<a name="line.48"></a>
+<span class="sourceLineNo">049</span>    assertNotNull(System.getProperty("java.home"));<a name="line.49"></a>
+<span class="sourceLineNo">050</span>    assertEquals("frood", System.getProperty("hoopy"));<a name="line.50"></a>
+<span class="sourceLineNo">051</span>  }<a name="line.51"></a>
+<span class="sourceLineNo">052</span>  <a name="line.52"></a>
+<span class="sourceLineNo">053</span>  @Test<a name="line.53"></a>
+<span class="sourceLineNo">054</span>  public void testSystemPropertiesBehavior() {<a name="line.54"></a>
+<span class="sourceLineNo">055</span>    final Properties properties = System.getProperties();<a name="line.55"></a>
+<span class="sourceLineNo">056</span>    assertTrue(properties instanceof MicroProfileConfigProperties);<a name="line.56"></a>
+<span class="sourceLineNo">057</span>    assertTrue(properties.containsKey("java.home"));<a name="line.57"></a>
+<span class="sourceLineNo">058</span>  }<a name="line.58"></a>
+<span class="sourceLineNo">059</span>  <a name="line.59"></a>
+<span class="sourceLineNo">060</span>}<a name="line.60"></a>
 
 
 
